# ai-energi-tracker

./: Procfile  README.md  dashboard.py  pyproject.toml  requirements.txt  verify_gemini.py
docs/: _abbreviations  index.md
docs/blog/: .authors.yml
docs/blog/posts/: 2026_03_improve_latency_estimation.md
docs/methodology/: llm_inference.md
docs/tutorial/providers/: litellm.md  openai.md
ecologits/: __init__.py
ecologits/data/: models.json
ecologits/impacts/: llm.py
ecologits/tracers/: google_genai_tracer.py  litellm_tracer.py  openai_tracer.py
tests/: test_litellm.py  test_openai.py
tests/cassettes/test_openai/: test_openai_async_responses.yaml  test_openai_async_stream_chat_with_options.yaml  test_openai_async_stream_responses.yaml  test_openai_responses.yaml  test_openai_stream_chat_with_options.yaml  test_openai_stream_responses.yaml
